2005-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* metaconfig: move "require 'base64'" and "require 'zlib'" to the
	  next line of "def get_zcontent(file)" for a ruby which doesn't
	  have 'zlib'.

2005-05-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for cygwin. fix for oracle instant client.
	* metaconfig: add distbin task.

2005-05-29  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::BindType::Mapping[:number_unknown_prec]
	  and OCI8::BindType::Mapping[:number_no_prec_setting].
	* ext/oci8/oraconf.rb: copy from oraconf.rb of ruby-oci8 0.2.
	* ext/oci8/lob.c: delete OCILobLocator#getChunkSize on Oracle 8.0.
	  use OCILobAssign() instead of OCILobLocatorAssign() on Oracle 8.0.
	* ext/oci8/extconf.rb: add have_func("OCILobGetChunkSize") and
	  have_func("OCILobLocatorAssign") for Oracle 8.0.
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.11
	* README: add '5. How to customize fetched datatypes.'

2005-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* branch as oci8-0-1.
	* oci8.rb.in: fix bug on binding Time or Date.
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.10.1

2005-03-23  KUBO Takehiro  <kubo@jiubao.org>
	* oci8.rb.in, OCI8.rb:
	delete OCI8.register_type_fixer, OCI8::TypeFixer.
	add OCI8::BindType::* instead.

2005-03-21  KUBO Takehiro  <kubo@jiubao.org>
	* oci8.rb.in, OCI8.rb: refactoring OCI8::Cursor#define_a_column
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.10

2005-03-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8.rb.in, lib/DBD/OCI8/OCI8.rb, test/test_dbi.rb:
	  enable DATE to be bound as a DBI::Date or a DBI::Timestamp.

2005-03-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8.rb.in, test/test_oci8.rb:
	  bind a ref cursor as an OCI8::Cursor.
          apply a patch at <URL:http://rubyforge.org/tracker/index.php?func=detail&aid=1409&group_id=256&atid=1053>.

2005-01-16  KUBO Takehiro  <kubo@jiubao.org>

	* lib/oci8.rb.in: change default bindtype for NUMBER with